<resources>
    <string name="app_name">STEMify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="health_lifestyle">Embracing a healthy lifestyle involves eating well, staying active, and taking care of your mental well-being.</string>
    <string name="health_1">A healthy diet
        \nA healthy diet involves eating a variety of foods in the correct proportions and consuming a calorie intake that allows for the maintenance of healthy body weight. Although this varies for everyone,
        as a general guide, this should include:
    \n\n\ta. Five portions of fruit and vegetables per day
    \n\tb. Lean proteins, especially fish, eggs, and white meat, are essential for cellular repair and provide a range of vitamins and minerals
    \n\tc. Dairy foods and their alternatives, which are a good source of protein and provide calcium.
    \n\td. Starchy foods, particularly wholegrain varieties which contain more fiber and nutrients
    \n\te. Limited amounts of unsaturated fats.
    </string>
    <string name="health_2">Physical activity
    \nThe World Health Organisation recommends that all adults undertake regular physical activity, including at least thirty minutes of moderate aerobic activity daily, supplemented by at least two weight-bearing activity sessions per week.
    \n</string>
    <string name="health_3">Sleep
    \nTry to get 7-8 hours every night and try to keep a regular sleep-wake cycle – go to bed and get up at the same time every day. A good nights sleep may make you more productive and efficient on the next day.\n </string>
    <string name="health_4">Drink Plenty of Water
    \nOur body is 75% water and it is necessary to maintain the amount of liquid we consume, especially water as it is the most vital liquid humans require. 8 glasses a day also equal to 3 litres of water a day should keep you
    hydrated and healthy. \n</string>
    <string name="health_5">Socialise
    \nHaving a healthy diet and exercising aren\'t the only contributors in having a healthy lifestyle, socialise with your peers and have some fun once in a while to keep yourself
    (mind and body) healthy and free of stress\n</string>
    <string name="mental_main"> It is understandable to feel scared, anxious or helpless during this
        unprecedented time. But whatever situation you are in and wherever you are in the World,
        you have the power to look after your mental health and well-being.</string>
    <string name="mental_1">Amidst the whirlwind of academics and social engagements, remember to prioritize self-care. This includes nourishing your body with proper nutrition, getting adequate sleep, and engaging in physical activity.
        Taking care of yourself physically can profoundly impact your mental health. Small acts of self-care can make a big difference in how you feel every day.</string>
    <string name="mental_2">It’s okay to feel down sometimes. Life has its highs and lows, and experiencing a range of emotions is entirely normal. Don’t be too hard on yourself for feeling sad, anxious, or stressed. Acknowledging these
        emotions and allowing yourself to feel them is an essential part of coping and healing.</string>
    <string name="mental_3">Try to continue doing the activities that you find meaningful and enjoyable, such as cooking for yourself or your loved ones, playing with your pet, walking in the park, reading a book, or watching a film or TV series.
        Having a regular routine with activities that make you feel happy will help you maintain good mental health.</string>
    <string name="mental_4">You\'re not alone in this journey. Having a support network can make a world of difference. Whether it\'s friends, family, teachers, or counselors, having someone to confide in can provide comfort and guidance during tough
        times. Don’t hesitate to seek help when you need it.</string>
    <string name="mental_5">Help free yourself of constantly swirling thoughts by reconnecting yourself with where you are at this moment in time. Simply take three slow deep breaths, feel your feet grounded on the floor</string>
    <string name="hotlines">Hotlines for Help:\Talian Kasih\nCall: 15999\nWhatsApp: 019–2615999\n\nMalaysian Mental Health Association\nOffice: 03–2780 6803\n\nBefrienders\nKuala Lumpur: 03–7627 2929 | sam@befrienders.org.my \nJohor Bahru: 07–2670707 | sam@befriendersjb.org \nKuching: 082–242800 | sam@befrienderskch.org.my</string>
    <string name="clean_main">Many people equate hygiene with "cleanliness", but hygiene is a broad term. It includes such personal habit choices as how frequently to take a shower or bath, wash hands, trim fingernails, and wash clothes. It also includes attention to keeping surfaces in the home and workplace clean, including bathroom facilities.\nSo, how do we start?</string>
    <string name="clean_wash">Your hands may look clean but does not necessarily mean they are. Wash hand properly and thoroughly with soap and water to prevent the unwanted microorganisms entering your body.</string>
    <string name="clean_bath">Showering twice a day in the ideal way to keep our bodies clean and hygiene. Not only does it keep our body clean, it also makes us feel clean and more comfortable. It is important to make sure to clean your entire body in the shower.\nWhy we need to shower? Keeping our bodies clean ultimately help us to be more healthy! </string>
    <string name="clean_teeth">Taking care of your teeth and gums is vital for good oral health, especially in areas with limited resources. Brushing teeth twice daily with fluoride toothpaste, using traditional methods like chewing sticks or neem twigs, and visiting
        a local dental worker can help prevent tooth decay and gum disease.\nRegular care ensures healthier smiles and reduces dental issues even in areas with fewer resources.</string>
    <string name="clean_cloth">It\'s recommended to wash clothes regularly, especially undergarments and those worn close to the skin, after each use or every few wears, depending on the level of activity and sweat. Airing clothes in the sun also helps reduce odors and keeps clothes clean.\n
    Regular washing is crucial as it prevents skin infections, improves personal hygiene and makes life healthier and more comfortable.</string>
    <string name="fit_main">Explore the benefits of exercising outdoors, enhancing brain health through meditation, and making small yet impactful exercise choices. Remember, a balanced routine is key to a healthier mind and body</string>
    <string name="fit_hiking">Who needs a gym membership when you have the outdoors?\nOutdoor exercise has a stronger effect on blood pressure and mood than indoor exercise. Stress is relieved within minutes of exposure to nature as measured by brain activity. To put it simply, time spent outside is good for you!</string>
    <string name="fit_yoga">With your eyes closed, simply breathe then breathe out. Focus on this circular breath is one of the best things you can do to improve your concentration, focus, memory, and mental agility.</string>
    <string name="fit_squat">Squats burn calories and might help you lose weight. They also lower your chances of injuring your knees and ankles.\nStretching keeps your muscles flexible, strong and healthy, and we need that flexibility to maintain a range of motion in the joints. </string>
    <string name="fit_rest">Sometimes all you need is a good lazy day to do nothing. Taking rest days can improve sleep, much like regular exercises. Moreover, lack of sleep may result in low motivation to take part in leisure activities. Always have a good balance in keeping your body and mind fit. </string>
    <string name="fit_cardio">Picture your heart as a champion athlete! Through vigorous outdoor activities, it pumps more efficiently, just like a supercharged engine, delivering oxygen and nutrients to your muscles faster. Its like your heart upgrading to a turbo mode!</string>
    <string name="fit_yoga2">Your brain calms down doing this! It releases mood-lifting chemicals called endorphins, making you feel like you have just had a dose of joy. Its like a dance party for your brain cells!</string>
    <string name="fit_muscle">Think of muscles as adaptable superheroes! When you exercise, they respond by repairing and growing stronger. Imagine them like construction workers building a fortress; each workout adds more strength and resilience</string>
    <string name="fit_rest2">Quality sleep involves various stages, including REM and non-REM cycles, which contribute to cognitive function, memory consolidation, and overall physical well-being. During sleep, the body undergoes essential processes such as tissue repair, immune system strengthening, and hormone regulation, supporting optimal health.</string>
    <string name="event1">The World Health Assembly is the decision-making body of WHO. It is attended by delegations from all WHO Member States and focuses on a specific health agenda to notify all the citizens on the World Health Association and the upcoming projects. People from all around the world are invited to join the assembly</string>
    <string name="event2">Come join us in investigating the science behind mental health and how it is transmitted in the brain. With a group of talented professors from San Jose, watch us unfold how the brain and mental health are interrelated. Free admission so save the date and join!</string>
    <string name="event3">Technology and Wellness are about to reach great lengths, join TechCares as they share how technology can positively impact the environment in ensuring a healthy life for the future generations. With insights and lucky draw sessions in the end, this forum is going to be on of the best yet!</string>
    <string-array name="materialType">
        <item>Type of material</item>
        <item>Video Lesson</item>
        <item>Practice</item>
        <item>Quiz</item>
    </string-array>
    <string-array name="durationQuiz">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>
    <string-array name="questionType">
        <item>Multiple-question</item>
        <item>Fill-in-the-blank</item>
    </string-array>
    <string name="doctor">"Doctors, also known as physicians, are licensed health professionals who maintain and restore human health through the practice of medicine. They examine patients, review their medical history, diagnose illnesses or injuries, administer treatment, and counsel patients on their health and well-being."</string>
    <string name="chemist">"A chemist is a scientist who performs research and experiments related to chemistry. They help to develop products like vaccinations and medications and analyze them to determine their composition, concentration and safety. They prepare technical reports to describe the methods and results of their research."</string>
</resources>