<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFE5EC"
    tools:context=".HealthFitness">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TBFitness"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FB6B92"
        android:elevation="4dp"
        android:title="Fitness" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Healthy Fitness &amp; The Biology Behind It"
        android:textAlignment="center"
        android:textColor="#66001B"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:id="@+id/textView3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:background="@color/white"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/fit_main" />

            <TextView
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_gravity="center"
                android:text="Hiking, Swimming, Cycling!"
                android:id="@+id/textView16" />

            <ImageView
                android:id="@+id/clean_main"
                android:layout_width="238dp"
                android:layout_height="152dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/trek" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_hiking"
                android:id="@+id/textView12z" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#035efc"
                android:text="What's the biology of it?"
                android:layout_gravity="center"
                android:id="@+id/TVBio1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_cardio"
                android:id="@+id/textView18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="Meditate "
                android:layout_gravity="center"
                android:id="@+id/textView12b" />

            <ImageView
                android:id="@+id/healthy_man"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/meditate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_yoga"
                android:id="@+id/textView13" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#035efc"
                android:text="What's the biology of it?"
                android:layout_gravity="center"
                android:id="@+id/TVBio2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_yoga2"
                android:id="@+id/textView18b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Simple exercises: squats, stretching"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:paddingTop="22dp"
                android:id="@+id/textView9" />

            <ImageView
                android:id="@+id/healthy_sleep"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/squat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_squat"
                android:id="@+id/textView10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#035efc"
                android:text="What's the biology of it?"
                android:layout_gravity="center"
                android:id="@+id/TVBio3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_muscle"
                android:id="@+id/textView18c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Have a rest day and sleep well"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:id="@+id/textView6" />

            <ImageView
                android:id="@+id/healthy_drink"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/rest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_rest"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#035efc"
                android:text="What's the biology of it?"
                android:layout_gravity="center"
                android:id="@+id/TVBio4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fit_rest2"
                android:id="@+id/textView18d" />

            <TextView
                android:id="@+id/textviewClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="52dp"
                android:text="Click Here For More Information"
                android:textAppearance="?android:attr/textAppearanceSmall" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>