<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFE5EC"
    tools:context=".Lifestyle">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TBHealthLifestyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FB6B92"
        android:elevation="4dp"
        android:title="Healthy Lifestyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Healthy Lifestyle Guidance"
        android:textColor="#66001B"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:paddingTop="12dp"
        android:id="@+id/textView3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:background="@color/white"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="4dp"
                android:textSize="16dp"
                android:text="@string/health_lifestyle"
                android:id="@+id/textView15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="22dp"
                android:text="Step 1"
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/textView16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/health_1"
                android:textAlignment="textStart"
                android:id="@+id/textView17" />

            <ImageView
                android:layout_width="206dp"
                android:layout_height="214dp"
                android:layout_gravity="center"
                android:src="@drawable/food"
                android:id="@+id/healthy_food"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="22dp"
                android:text="Step 2"
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/textView12b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_2"
                android:id="@+id/textView13" />

            <ImageView
                android:id="@+id/healthy_man"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/man" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step 3"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="22dp"
                android:id="@+id/textView9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_3"
                android:id="@+id/textView10" />

            <ImageView
                android:id="@+id/healthy_sleep"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/sleep" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step 4"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="22dp"
                android:id="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_4"
                android:id="@+id/textView7" />

            <ImageView
                android:id="@+id/healthy_drink"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/water" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step 5"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="22dp"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_5"
                android:id="@+id/textView2" />

            <ImageView
                android:id="@+id/healthy_stress"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/socialise" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Click Here for more info"
                android:id="@+id/textView4" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>