<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFE5EC"
    tools:context=".MentalHealth">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TBMentalHealth"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FB6B92"
        android:elevation="4dp"
        android:title="Health Guidance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mental Health Help!"
        android:textColor="#66001B"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:paddingTop="12dp"
        android:id="@+id/textView3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:background="@color/white"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/mental_main"
                android:id="@+id/textView15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="22dp"
                android:layout_gravity="center"
                android:text="Taking care of yourself"
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/textView16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/mental_1"
                android:textAlignment="textStart"
                android:id="@+id/textView17" />

            <ImageView
                android:id="@+id/hugs"
                android:layout_width="164dp"
                android:layout_height="151dp"
                android:layout_gravity="center"
                android:src="@drawable/hug" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="22dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="Embracing the Ups and Downs"
                android:id="@+id/textView12b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mental_2"
                android:id="@+id/textView13" />

            <ImageView
                android:id="@+id/sad_emoticon"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/sad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do activities that you enjoy"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="22dp"
                android:id="@+id/textView9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mental_3"
                android:id="@+id/textView10" />

            <ImageView
                android:id="@+id/having_fun"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/fun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Building a Support System"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingTop="22dp"
                android:id="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mental_4"
                android:id="@+id/textView7" />

            <ImageView
                android:id="@+id/friends"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/friends" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="Take two minutes to focus on the world around you"
                android:paddingTop="22dp"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mental_5"
                android:id="@+id/textView2" />

            <ImageView
                android:id="@+id/world"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/world" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="55dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Click Here to find out more"
                android:id="@+id/textviewClick" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>